--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,macos,java,maven,gradle
+# Ignore Gradle build output directory
+build
