--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -88,6 +88,6 @@ jobs:
 
       #### BEGIN junit5
       - name: docker junit5
-        working-directory: .
+        working-directory: src/test
         run: "sh .scripts/assure_failing_test.sh './docker_test.sh' 'AppTestt > fail() FAILED'"
       #### END junit5
